Added log of methods activity